[package]
name = "aes"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["elliotwils0n"]
description = "Advanced Encryption Standard"
readme = "README.md"
repository = "https://github.com/elliotwils0n/aes"
license = "MIT"
keywords = ["cryptography", "encryption", "security"]

[dependencies]
